Fixed form spacing

--- a/watch/style.css
+++ b/watch/style.css
@@ -64,8 +64,15 @@ body {
 }
 
 small {
-  font-size: 12px;
+  display: block;
+  padding-top: 8px;
+  font-size: 14px;
   color: #666666;
+  line-height: 1;
+}
+
+.xs {
+  font-size: 10px;
 }
 
 strong {
@@ -109,10 +116,12 @@ video {
   outline: #DDDDDD;
   width: 150px;
   height: 48px;
+  min-height: 40px;
   border: none;
   border-bottom: solid 3px #6c0f96;
   border-radius: 8px;
   font-size: 20px;
+  margin-bottom: 32px;
 }
 
 .submit-button:hover {
